--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
   <footer>
-    Made with by Ananya :)
+    Made by Ananya :)
   </footer>
 
   <script src="index.js" charset="utf-8"></script>
